--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "2.1"
 services:
   web:
     build:
@@ -10,7 +9,24 @@ services:
       - .:/app:cached
     working_dir: /app
     environment:
-      - RACK_ENV=${RACK_ENV}
-      - DISCORD_API_TOKEN=${DISCORD_API_TOKEN}
-      - TZ=${TZ}
-    entrypoint: bundle exec rackup --host 0.0.0.0 -p 4567
+      RACK_ENV: ${RACK_ENV}
+      DISCORD_API_TOKEN: ${DISCORD_API_TOKEN}
+      DISCORD_CLIENT_ID: ${DISCORD_CLIENT_ID}
+      REDIS_URL: ${REDIS_URL}
+      TZ: ${TZ}
+      # POSTGRES_URL: ${POSTGRES_URL}
+    depends_on:
+      - redis
+    networks:
+      - botnetwork
+    entrypoint: |
+      bundle exec rackup --host 0.0.0.0 -p 4567
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+    networks:
+      - botnetwork
+
+networks:
+  botnetwork:
