--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       TZ: ${TZ}
       # POSTGRES_URL: ${POSTGRES_URL}
     depends_on:
+      - gem_cache
       - redis
     networks:
       - botnetwork
@@ -25,6 +26,12 @@ services:
     image: redis:latest
     ports:
       - "6379:6379"
+    networks:
+      - botnetwork
+  gem_cache:
+    image: busybox
+    volumes:
+      - /gem_cache
     networks:
       - botnetwork
 
