--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,11 +1,10 @@
 ---
 name: 'Build, Push, Deploy'
 on:
+  workflow_dispatch:
   push:
     branches:
-      - main
-  workflow_dispatch:
-
+      - master
 jobs:
   build:
     name: Build, Push, Deploy
